--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,6 +9,7 @@
 <body class="frame_body">
   <ul class="frame_nav">
     <li><a href="#interest">Interest</a></li>
+    <li><a href="#hw required">HW Required</a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="#info">Info</a></li>
   </ul>
@@ -49,10 +50,29 @@
           yehyuhsuancamel
          </a>
       </li>
-	  <li>- GitHub&nbsp&nbsp&nbsp&nbsp&nbsp -
-         <a href="https://github.com/yhyeh" target="_blank">
-          yhyeh
-         </a>
+    </ul>
+  </div>
+  <div class="section" id="hw required">
+    <h2>HW Required</h2>
+    <ul>
+      <li><h4><b>網頁設計學習經歷</b></h4>
+        <ul>
+          <li>完全沒有&gt&lt
+          </li>
+        </ul>
+      </li>
+      <li><h4><b>對課程內容與進度的建議</b></h4>
+        <ul>
+          <li>目前課程內容滿完整充實的，但若上課時沒有跟著實作，
+              或課後沒有練習，其實很容易就忘記如何運用這些功能和語法，
+              因此大部分的學習
+              還是在自己寫網頁的時候查詢資料所得，因此課堂上主要是知道「啊 ! 原來有這
+              種功能啊」往後遇到問題時就能快速找到相關資料，html和css真的是修行在個人啊!
+              或許往後可以用大家自己寫project，有問題再請教老師的模式上課吧......
+              因此建議課程安排可以Javascript為重，另外希望能多講關於跨裝置responsive的問題，
+              及行動裝置上的web有什麼差異。
+          </li>
+        </ul>
       </li>
     </ul>
   </div>
